--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "electron .",
     "start": "chcp 65001 && electron .",
-    "package":"electron-packager . PigDrive --win --out ./out/"
+    "package":"electron-packager . PigDrive --win --out ./out/ --overwrite"
   },
   "author": "",
   "license": "ISC",
