--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "electron .",
     "start": "chcp 65001 && electron .",
-    "package": "electron-packager . PigDrive --win --out ./out/ --overwrite --icon img/favicon_circle.ico"
+    "package": "electron-packager . PigDrive --out ./out/ --overwrite --icon img/app_circle.ico --asar",
+    "setup": "npm install && tsc"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/request": "^2.48.1",
     "electron": "^3.0.8",
-    "vue": "^2.5.17"
+    "typescript": "^3.1.6"
   },
   "dependencies": {
     "baidupanapi": "^1.2.1",
